fixes overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -74,7 +74,8 @@
     // border: 1px solid blue;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
+    // overflow-y: auto;
     padding: 1rem 0;
     scrollbar-width: none;
     /* For Internet Explorer, Edge */
